[tool.poetry]
name = "apple-silicon-pytorch"
version = "0.1.0"
description = "test pytorch on apple silicon gpu"
authors = ["karim <karimamunaff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.64.0"
typer = "^0.6.1"
pydantic = "^1.9.1"
black = "^22.6.0"
isort = "^5.10.1"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"